2006-11-05  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tileit.c: applied patch from Saul Goode to fix
	confusion with flip direction (bug #365436).

2006-11-05  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpcroptool.[ch]
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimprectangleselecttool.[ch]
	* app/tools/gimprectangletool.[ch]: removed dispose() and
	finalize() implementations. The finalize() ones did nothing and
	dispose() was only redundantly disconnecting from signals that
	were connected using connect_object() anyway. Some cosmetic
	cleanups all over the place.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/actions/file-actions.c
	* app/actions/file-commands.[ch]
	* menus/image-menu.xml.in: renamed file-open-as-layer to
	file-open-as-layers to complete the changes done to fix bug #358082.

2006-11-05  Sven Neumann  <sven@gimp.org>

	* app/core/gimp-transform-region.c: applied patch from gg that
	removes duplicated code (bug #358481).

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: merged all tool options notify
	callbacks into a single one and added utility function
	gimp_rectangle_tool_synthesize_motion() to improve
	maintainability.

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_motion): need
	to subtract the snap_x and snap_y values from the coords before
	calling ourselves recursively, otherwise we run into an infinite
	recursion.

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: removed
	gimp_rectangle_tool_get_function() and set_function().

2006-11-04  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c: pause the draw tool earlier in
	motion() so we don't get artifacts when the function changes.
	Fixed inside_x and inside_y usage in oper_update(). Get rid of
	some local variables in draw().

2006-11-04  Michael Natterer  <mitch@gimp.org>
